working on communication of img name and width ratio to the python side

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,9 +1,14 @@
+html, body {
+  margin: 0;
+  height: 100%;
+}
+
 p
 {
     font-size: 100px;
 }
 
-.resizable
+.resizable_img
 {
   display: inline-block;
   background: red;
