--- a/templates/upload_complete.html
+++ b/templates/upload_complete.html
@@ -16,7 +16,7 @@
         <br><br><br><br>
         <img id="carved_img_id">
         <br><br><br><br>
-        <img class="resizable_img" src="{{ url_for('static', filename='uploaded_images/' +  uploaded_image_filename) }}">
+        <img src="{{ url_for('static', filename='uploaded_images/' +  uploaded_image_filename) }}">
 
 
     {% else %}
