--- a/templates/upload.html
+++ b/templates/upload.html
@@ -1,15 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
+<link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet'>
+<link rel="stylesheet" href="/static/css/style.css">
+
 <head>
     <meta charset="UTF-8">
-    <title>Upload</title>
+    <title>Seam Carving</title>
 </head>
 <body>
-    <h1>File Uploader</h1>
-    <form id="upload_form_id" action="{{ url_for('upload') }}" method="POST" enctype="multipart/form-data">
-        <input type="file" name="uploaded_image" accept="image/*">
-        <input type="submit" value="send">
-    </form>
+    <div class="upload_page_container">
+        <h1>Seam Carving</h1>
+
+        <div class="flexbox_container">
+            <div class="same_height_col">>A temporary paragraph</div>
+            <div class="same_height_col"><img src="/static/uploaded_images/temporary_img.png"></div>
+          </div>
+
+        <br><br><br><br><br><br><br>
+
+        
+            <form id="upload_form_id" action="{{ url_for('upload') }}" method="POST" enctype="multipart/form-data">
+                <div class ="flexbox_container">
+                        <input type="file" class="form-control-file" name="uploaded_image" accept="image/*" style="border-style: dashed;">
+                        <button id="send_button" class="btn btn-info btn-lg" type="submit">
+                            <span class="glyphicon glyphicon-upload"></span> Upload
+                        </button>    
+                </div>
+            </form>
+
+
+        <br><br><br><br><br><br><br>
+
+        <!-- <form id="upload_form_id" action="{{ url_for('upload') }}" method="POST" enctype="multipart/form-data">
+            <div class="container" style="border-style: dashed;">
+                <div class="row" style="display:inline-block;">
+                    <div class="col-sm-8">
+                        <input type="file" class="form-control-file" name="uploaded_image" accept="image/*" style="border-style: dashed; height: 45px;">
+                    </div>
+                    <div class="col-sm-4">
+                        <button id="send_button" class="btn btn-info btn-lg" type="submit" style="border-style: dashed;">
+                            <span class="glyphicon glyphicon-upload"></span> Upload
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </form> -->
 
 
 
@@ -19,9 +55,6 @@
 
 
 
-
-
-
-
+    </div>
 </body>
 </html>
