--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,11 +1,45 @@
-html, body {
-  margin: 0;
+html, body 
+{
+  width: 100%;
   height: 100%;
 }
 
 p
 {
-    font-size: 20px;
+  font-size: 20px;
+}
+
+h1
+{
+  font-size: 50px;
+  font-family: 'Raleway';
+  margin-top: 100px;
+  margin-bottom: 100px;
+}
+
+.upload_page_container
+{
+  text-align: center;
+  overflow: auto;
+}
+
+.container
+{
+  justify-content: center;
+  justify-items: center;
+}
+
+.flexbox_container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: solid;
+}
+
+.same_height_col {
+  flex: 1;
+  padding: 1em;
+  border: dashed;
 }
 
 .resizable_img
