--- a/templates/upload.html
+++ b/templates/upload.html
@@ -9,11 +9,11 @@
     <title>Seam Carving</title>
 </head>
 <body>
-    <div class="upload_page_container">
+    <div class="page_container">
         <h1>Seam Carving</h1>
 
         <div class="flexbox_container">
-            <div class="same_height_col">>A temporary paragraph</div>
+            <div class="same_height_col">A temporary paragraph</div>
             <div class="same_height_col"><img src="/static/uploaded_images/temporary_img.png"></div>
           </div>
 
