--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,18 +1,13 @@
-html, body 
-{
-  width: 100%;
-  height: 100%;
-}
-
 p
 {
   font-size: 20px;
+  font-family: "Raleway";
 }
 
 h1
 {
   font-size: 50px;
-  font-family: 'Raleway';
+  font-family: "Raleway";
   margin-top: 100px;
   margin-bottom: 100px;
 }
@@ -28,13 +23,17 @@ h1
   flex-flow: row nowrap;
   justify-content: center;
   align-items: center;
-  border: solid;
+  margin-bottom: 100px;
 }
 
 .same_height_col {
   flex: 1;
   padding: 1em;
-  border: dashed;
+}
+
+.description
+{
+  margin-left: 5vw;
 }
 
 .resizable_img
