--- a/templates/upload.html
+++ b/templates/upload.html
@@ -13,15 +13,33 @@
         <h1>Seam Carving</h1>
 
         <div class="flexbox_container">
-            <div class="same_height_col">A temporary paragraph</div>
-            <div class="same_height_col"><img src="/static/uploaded_images/temporary_img.png"></div>
+            <div class="same_height_col">
+                <div class="description">
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                         incididunt ut labore et dolore magna aliqua. Purus viverra accumsan in nisl 
+                         nisi scelerisque eu ultrices vitae. Feugiat nisl pretium fusce id velit ut. 
+                         At auctor urna nunc id cursus. Mi tempus imperdiet nulla malesuada pellentesque 
+                         elit. Pharetra magna ac placerat vestibulum lectus. Mauris nunc congue nisi vitae. 
+                         Pellentesque habitant morbi tristique senectus et netus et malesuada. Euismod 
+                         quis viverra nibh cras pulvinar mattis nunc sed blandit. Urna et pharetra pharetra 
+                         massa massa ultricies. Mi sit amet mauris commodo quis imperdiet massa tincidunt. 
+                         Tellus id interdum velit laoreet. Venenatis lectus magna fringilla urna porttitor 
+                         rhoncus dolor purus. Nisl nunc mi ipsum faucibus vitae aliquet nec ullamcorper. 
+                         Orci ac auctor augue mauris augue neque. Tellus elementum sagittis vitae et leo 
+                         duis ut diam quam. Etiam non quam lacus suspendisse faucibus interdum. Metus 
+                         vulputate eu scelerisque felis. Urna id volutpat lacus laoreet non curabitur 
+                         gravida arcu ac.</p>
+                </div>
+            </div>
+            <div class="same_height_col">
+                <img src="/static/sample_images/temporary_img.png">
+            </div>
           </div>
-
-        <br><br><br><br><br><br><br>
 
         <form id="upload_form_id" action="{{ url_for('upload') }}" method="POST" enctype="multipart/form-data">
             <div class ="flexbox_container">
-                    <input type="file" class="form-control-file" name="uploaded_image" accept="image/*" style="border-style: dashed;">
+                    <input type="file" class="form-control-file" name="uploaded_image" accept="image/*" style="border-style: solid;">
                     <button id="send_button" class="btn btn-info btn-lg" type="submit">
                         <span class="glyphicon glyphicon-upload"></span> Upload
                     </button>    
