added description and sample image

--- a/templates/upload.html
+++ b/templates/upload.html
@@ -16,24 +16,15 @@
             <div class="same_height_col">
                 <div class="description">
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                         incididunt ut labore et dolore magna aliqua. Purus viverra accumsan in nisl 
-                         nisi scelerisque eu ultrices vitae. Feugiat nisl pretium fusce id velit ut. 
-                         At auctor urna nunc id cursus. Mi tempus imperdiet nulla malesuada pellentesque 
-                         elit. Pharetra magna ac placerat vestibulum lectus. Mauris nunc congue nisi vitae. 
-                         Pellentesque habitant morbi tristique senectus et netus et malesuada. Euismod 
-                         quis viverra nibh cras pulvinar mattis nunc sed blandit. Urna et pharetra pharetra 
-                         massa massa ultricies. Mi sit amet mauris commodo quis imperdiet massa tincidunt. 
-                         Tellus id interdum velit laoreet. Venenatis lectus magna fringilla urna porttitor 
-                         rhoncus dolor purus. Nisl nunc mi ipsum faucibus vitae aliquet nec ullamcorper. 
-                         Orci ac auctor augue mauris augue neque. Tellus elementum sagittis vitae et leo 
-                         duis ut diam quam. Etiam non quam lacus suspendisse faucibus interdum. Metus 
-                         vulputate eu scelerisque felis. Urna id volutpat lacus laoreet non curabitur 
-                         gravida arcu ac.</p>
+                        Seam carving is an algorithm for content-aware image resizing. It functions by establishing 
+                        a number of seams (paths of least importance) in an image and removing them in the resizing 
+                        process. The purpose of the algorithm is image retargeting, which allows the users to resize images 
+                        without distorting or losing significant portions of the image.
+                    </p>
                 </div>
             </div>
             <div class="same_height_col">
-                <img src="/static/sample_images/temporary_img.png">
+                <img src="/static/sample_images/sample.jpg">
             </div>
           </div>
 
