added Procfile and wsgi

--- a/templates/carving_page.html
+++ b/templates/carving_page.html
@@ -15,7 +15,7 @@
     <div class="page_container">
         <p>
             Click and drag your uploaded image on the left to perform a seam carving on it, or click
-            <a href="{{ url_for('homepage') }}">here</a> to go back to the upload page.
+            <a href="{{ url_for('upload_page') }}">here</a> to go back to the upload page.
         </p>
         <p>Please note that large images take longer time to process.</p>
 
