--- a/templates/carving_page.html
+++ b/templates/carving_page.html
@@ -28,7 +28,7 @@
             </div>
         </div>
 
-        <div class="flexbox_container">
+        <div class="flexbox_container" style="margin-bottom: 50px;">
             <div class="same_height_col" id="resizable_img_container_id">
                 <img class="resizable_img" src="{{ url_for('static', filename='uploaded_images/' +  uploaded_image_filename) }}">
             </div>
