--- a/templates/upload.html
+++ b/templates/upload.html
@@ -50,7 +50,7 @@
                         <span class="glyphicon glyphicon-upload"></span> Upload
                     </button>
                 </div>
-                <div class="g-recaptcha" data-sitekey="6LdzfwAVAAAAAGbQNXovawzQfDWyAmzWzNod5SFd" data-callback="enableBtn" expired-callback="disableBtn"></div>
+                <div class="g-recaptcha" data-sitekey="6LdzfwAVAAAAAGbQNXovawzQfDWyAmzWzNod5SFd" data-callback="enableBtn" data-expired-callback="disableBtn"></div>
             </div>
         </form>
     </div>
